--- a/blog.html
+++ b/blog.html
@@ -9,17 +9,24 @@
     </head>
 
     <body>
-        <ul class=menu>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="mission.html">Mission and Members</a></li>
-            <li><a href="initiatives.html">Initiatives</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="justice.html">Climate Justice</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="blog.html">Blog</a></li>
-        </ul>
+        <div class="banner">
+            <div class=header>
+                <img src="https://i.imgur.com/r2U7JxL.png" alt="Logo showing the earth surrounded by a circular banner with the words Greater Tucson Climate Coalition" />
+                <h1>Greater Tucson Climate Coalition</h1>
+                
+            </div>
+            <ul class=menu>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="mission.html">Mission and Members</a></li>
+                <li><a href="initiatives.html">Initiatives</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="justice.html">Climate Justice</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
         
         <h1>Blog</h1>
     </body>
