--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,9 @@
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
-        
-        <h1>Contact</h1>
+        <div class="content">
+            <h1>Contact</h1>
+        </div>
     </body>
 
 </html>
