--- a/initiatives.html
+++ b/initiatives.html
@@ -28,7 +28,9 @@
             </ul>
         </div>
         
-        <h1>Initiatives</h1>
+        <div class="content">
+            <h1>Initiatives</h1>
+        </div>
     </body>
 
 </html>
