Added placeholder content to all pages.

--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,10 @@
         </div>
         <div class="content">
             <h1>Blog</h1>
+            <h2>Blog Post 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa enim nec dui nunc. Fames ac turpis egestas sed tempus urna et pharetra pharetra. Orci dapibus ultrices in iaculis nunc sed augue lacus. In hendrerit gravida rutrum quisque non. Tellus at urna condimentum mattis. Tortor condimentum lacinia quis vel. </p>
+            <h2>Blog Post 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa enim nec dui nunc. Fames ac turpis egestas sed tempus urna et pharetra pharetra. Orci dapibus ultrices in iaculis nunc sed augue lacus. In hendrerit gravida rutrum quisque non. Tellus at urna condimentum mattis. Tortor condimentum lacinia quis vel. </p>
         </div>
     </body>
 
