--- a/resources.html
+++ b/resources.html
@@ -29,6 +29,7 @@
         </div>
         <div class="content">
             <h1>Resources</h1>
+            <p><a href="https://www.rewiringamerica.org/app/ira-calculator">Rewiring America</a> Has a Inflation Reduction Act calculator to tell you ways you can save on your taxes and save the enviroment!</p>
         </div>
     </body>
 
