--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,13 @@
         </div>
         <div class="content">
             <h1>Contact</h1>
+            <p>Email:</p>
+            <p>Social media:</p>
+            <ul>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+            </ul>
         </div>
     </body>
 
