--- a/events.html
+++ b/events.html
@@ -29,6 +29,7 @@
         </div>
         <div class="content">
             <h1>Events</h1>
+            <p>Coming soon!</p>
         </div>
     </body>
 
