Added Take action button and bottom banner.

--- a/justice.html
+++ b/justice.html
@@ -13,7 +13,7 @@
             <div class=header>
                 <img src="https://i.imgur.com/r2U7JxL.png" alt="Logo showing the earth surrounded by a circular banner with the words Greater Tucson Climate Coalition" />
                 <h1>Greater Tucson Climate Coalition</h1>
-                
+                <a href="" class="TakeAction">Take Action!</a>
             </div>
             <ul class=menu>
                 <li><a href="index.html">Home</a></li>
@@ -33,6 +33,9 @@
             <h2>Community Stories</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <h2></h2>
+        </div>
+        <div class="footer">
+            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
         </div>
     </body>
 
