--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,11 @@
             <h1>Resources</h1>
             <p><a href="https://www.rewiringamerica.org/app/ira-calculator">Rewiring America</a> Has a Inflation Reduction Act calculator to tell you ways you can save on your taxes and save the enviroment!</p>
         </div>
+        <div class="footer">
+            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
+        </div>
     </body>
+    
 
 </html>
 
