--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <div class=header>
                 <img src="https://i.imgur.com/r2U7JxL.png" alt="Logo showing the earth surrounded by a circular banner with the words Greater Tucson Climate Coalition" />
                 <h1>Greater Tucson Climate Coalition</h1>
-                
+                <a href="" class="TakeAction">Take Action!</a>
             </div>
             <ul class=menu>
                 <li><a href="index.html">Home</a></li>
@@ -35,6 +35,9 @@
                 <li>Twitter</li>
                 <li>Instagram</li>
             </ul>
+        </div>
+        <div class="footer">
+            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
         </div>
     </body>
 
