--- a/mission.html
+++ b/mission.html
@@ -45,6 +45,7 @@
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
+            <a href="" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
 
