--- a/news.html
+++ b/news.html
@@ -33,6 +33,7 @@
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
+            <a href="" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
 
