Added bottom text.

--- a/justice.html
+++ b/justice.html
@@ -35,7 +35,7 @@
             <h2></h2>
         </div>
         <div class="footer">
-            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
+            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
             <a href="" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
