--- a/mission.html
+++ b/mission.html
@@ -48,7 +48,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
         <div class="footer">
-            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
+            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
             <a href="" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
