--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
             <p><a href="https://www.rewiringamerica.org/app/ira-calculator">Rewiring America</a> Has a Inflation Reduction Act calculator to tell you ways you can save on your taxes and save the enviroment!</p>
         </div>
         <div class="footer">
-            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups that self organize to advocate for climate solutions.</p>
+            <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
             <a href="" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
