--- a/act.html
+++ b/act.html
@@ -14,6 +14,7 @@
                 <img src="https://i.imgur.com/r2U7JxL.png" alt="Logo showing the earth surrounded by a circular banner with the words Greater Tucson Climate Coalition" />
                 <h1>Greater Tucson Climate Coalition</h1>
                 <a href="act.html" class="TakeAction">Take Action!</a>
+                
             </div>
             <ul class=menu>
                 <li><a href="index.html">Home</a></li>
@@ -26,15 +27,15 @@
             </ul>
         </div>
         <div class="content">
-            <h1>News</h1>
-            <h2>Recent News</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h1>Take Action</h1>
+            <p>Placeholder, more to come...</p>
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
             <a href="act.html" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
+    
 
 </html>
 
