--- a/initiatives.html
+++ b/initiatives.html
@@ -13,7 +13,7 @@
             <div class=header>
                 <img src="https://i.imgur.com/r2U7JxL.png" alt="Logo showing the earth surrounded by a circular banner with the words Greater Tucson Climate Coalition" />
                 <h1>Greater Tucson Climate Coalition</h1>
-                <a href="" class="TakeAction">Take Action!</a>
+                <a href="act.html" class="TakeAction">Take Action!</a>
             </div>
             <ul class=menu>
                 <li><a href="index.html">Home</a></li>
@@ -37,7 +37,7 @@
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
-            <a href="" class="TakeActionFooter">Take Action!</a>
+            <a href="act.html" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
 
