--- a/mission.html
+++ b/mission.html
@@ -42,6 +42,14 @@
                     <p>Social media: </p>
                 </div>
             </div>
+            
+            <div class="member">
+                <h3>Arizonan's for Community Choice</h3>
+                <img height="100px" class="member" src="https://i.imgur.com/gNfRP0H.png" />
+                <p>The mission of Arizonans for Community Choice (AZ4CC) is to bring Community Choice Energy (CCE), also called Community Choice Aggregation (CCA), to Arizona to increase consumers' and municipalities' control over electricity generation, achieve municipal and county climate action goals, reduce electricity rates, and accelerate the transition to a renewable energy economy.  To that end, AZ4CC is mobilizing grassroots support; advocating for CCA among city and county mayors, councils, boards of supervisors and sustainability staff; and urging State Legislators and Arizona Corporation Commissioners to create the regulatory structure for CCAs to operate in Arizona.</p>
+                <p>Website link: <a href="https://az4cc.org">az4cc.org</a></p>
+            </div>
+            
             <h2>Impact Story</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
