--- a/events.html
+++ b/events.html
@@ -27,7 +27,9 @@
         </div>
         <div class="content">
             <h1>Events</h1>
-            <p>Coming soon!</p>
+            <h2>Tucson Meet Yourself</h2>
+            <img src="https://i.imgur.com/5VOqMqs.png" />
+            <p>Join members of the Greater Tucson Climate Coalition (GTCC) and the AZ Youth Climate Coalition (AZYCC) at Booths 76-77 in TMY's Community Matters section near the Pennington Street entrance.  We're tabling on Friday 11am-6pm; Saturday 11am to 8pm; and Sunday 11am to 6pm.  See you there!  </p>
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
