Added AZYCC and CCL to members page.

--- a/mission.html
+++ b/mission.html
@@ -49,6 +49,27 @@
                 <p>Website link: <a href="https://az4cc.org">az4cc.org</a></p>
             </div>
             
+            <div class="member">
+                <h3>Arizona Youth Climate Coalition - Tucson Chapter</h3>
+                <img height="100px" width="100px" class="member" src="https://i.imgur.com/o80bvOQ.png" />
+                <div  class="memberText">
+                    <p>Arizona Youth Climate Coalition (AZYCC) is a collaborative, youth-led organization fighting forclimate justice across the Grand Canyon State. Through a combination of tactics ranging from direct action, mutual aid, civic engagement, education, and more, we are building a movement of young people from middle school to undergraduate college-age to fight the climate crisis and the systems that created it. There can be no climate justice without racial, economic, and social justice; solutions to the climate crisis will be community-driven and accessible, not privatized or for profit.
+                    <p>Website link: <a href="http://www.azyouthclimate.org">www.azyouthclimate.org</a></p>
+                    <p>Social media:</p>
+                    <p>insta: @azyouthclimate</p>
+                    <p>facebook: @azyouthclimate</p>
+                    <p>Twitter/X: @azyouthclimate</p>
+                    <p>email: <a href="azyouthclimate@gmail.com">www.azyouthclimate.org</a></p>
+                </div>
+            </div>
+            <div class="member">
+                <h3>Citizens Climate Lobby - Greater Tucson Chapter</h3>
+                <img height="100px" width="100px" class="member" src="https://i.imgur.com/qbeBnch.png" />
+                <div  class="memberText">
+                    <p>Citizens’ Climate Lobby is a non-profit, nonpartisan, grassroots advocacy organization formed to address climate change. At the national level, our proposal is to establish federal legislation to implement <a href="https://citizensclimatelobby.org/price-on-carbon/">Carbon Fee and Dividend</a>. A national, revenue-neutral carbon fee-and-dividend system would place a predictable, steadily rising price on the carbon in fossil fuels, with all fees collected minus administrative costs returned to households as a monthly energy dividend. Our local chapter is involved in a number of activities, including grassroots outreach at public events, engaging community leaders, organizing public presentations on climate change, communications with the media, and direct meetings with candidates for, and elected representatives to, local, state, and national offices.</p>
+                    <p>Website link: <a href="https://tucsonccl.com">tucsonccl.com</a></p>
+                </div>
+            </div>
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
