--- a/index.html
+++ b/index.html
@@ -28,21 +28,27 @@
             <div class="slideshow-container">
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="https://i.imgur.com/aSX3NI7.jpg" style="width:100%">
-                <div class="text">Caption Text</div>
+                <div class="numbertext">1 / 4</div>
+                <img src="https://i.imgur.com/dtK7ujP.jpg" style="width:100%">
+                <div class="text"></div>
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="https://i.imgur.com/p4gd2qt.jpg" style="width:100%">
-                <div class="text">Caption Two</div>
+                <div class="numbertext">2 / 4</div>
+                <img src="https://i.imgur.com/T8GL8x8.jpg" style="width:100%">
+                <div class="text">Copyright Rick Rappaport 2022</div>
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="https://i.imgur.com/wJVVRjW.jpg" style="width:100%">
-                <div class="text">Caption Three</div>
+                <div class="numbertext">3 / 4</div>
+                <img src="https://i.imgur.com/gR2P8Xd.jpg" style="width:100%">
+                <div class="text">Copyright Rick Rappaport 2023</div>
+              </div>
+              
+              <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="https://i.imgur.com/WKQiM5T.jpg" style="width:100%">
+                <div class="text"></div>
               </div>
 
               <!-- Next and previous buttons -->
