--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,7 @@
         </div>
         <div class="content">
             <h1>Contact</h1>
-            <p>Email:</p>
-            <p>Social media:</p>
-            <ul>
-                <li>Facebook</li>
-                <li>Twitter</li>
-                <li>Instagram</li>
+            <p>Email: <a href="mailto:energychoice4soaz@gmail.com">energychoice4soaz@gmail.com</a></p>
             </ul>
         </div>
         <div class="footer">
