Pointed Take Action to the google form.

--- a/mission.html
+++ b/mission.html
@@ -13,7 +13,7 @@
             <div class=header>
                 <img src="https://i.imgur.com/r2U7JxL.png" alt="Logo showing the earth surrounded by a circular banner with the words Greater Tucson Climate Coalition" />
                 <h1>Greater Tucson Climate Coalition</h1>
-                <a href="act.html" class="TakeAction">Take Action!</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejQ_kB5Vgf5MEES2eMNyLDYaUWaT4_910R76uftDebJHVgvA/viewform?usp=sf_link" class="TakeAction">Take Action!</a>
             </div>
             <ul class=menu>
                 <li><a href="index.html">Home</a></li>
@@ -73,7 +73,7 @@
         </div>
         <div class="footer">
             <p>The Greater Tucson Climate Coalition is a group of citizens and community groups, in southern Arizona, that self organize to advocate for climate solutions.</p>
-            <a href="act.html" class="TakeActionFooter">Take Action!</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSejQ_kB5Vgf5MEES2eMNyLDYaUWaT4_910R76uftDebJHVgvA/viewform?usp=sf_link" class="TakeActionFooter">Take Action!</a>
         </div>
     </body>
 
