Added Consumer Notice Resources.

--- a/resources.html
+++ b/resources.html
@@ -37,6 +37,11 @@
         <p><a href="https://www.rewiringamerica.org/app/ira-calculator">Rewiring America</a> Has a Inflation Reduction Act calculator to tell you ways you can save on your taxes and save the enviroment!</p>
         
         <h2>Misc Resources</h2>
+        <p>Consumer Notice Guide for reducing pollution</p>
+        <p><a href="https://www.consumernotice.org/environmental/pollution-reduction/">https://www.consumernotice.org/environmental/pollution-reduction/</a></p>
+        <p>Consumer Notice Guide for avoiding PFAS</p>
+        <p><a href="https://www.consumernotice.org/environmental/water-contamination/pfas/">https://www.consumernotice.org/environmental/water-contamination/pfas/</a></p>
+        
         <p>EPA Tool for measuring direct emissions</p>
         <p><a href="https://www.epa.gov/egrid/data-explorer">https://www.epa.gov/egrid/data-explorer</a></p>
 
