--- a/acc.html
+++ b/acc.html
@@ -23,6 +23,7 @@
                 <li><a href="events.html">Events</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="acc.html">ACC</a></li>
             </ul>
             
         </div>
