Fixed typo on homepage.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             
             <h2>Arizona Corportation Commission Public Education Campaign</h2>
             <p><span style="font-weight: bold;">The Arizona Corporation Commission (ACC) decides how much we pay for electricity, and how much fossil fuel we burn in this state.</span> We could be burning none, and we could be paying less, yet Arizona utilities emit over 32 Megatons of CO2 per year and we have gotten massive rate increases. If we want to be effective in addressing our affordability crisis and climate change, every Arizona voter needs to vote all the way down the ballot. ACC is at the bottom, and three out of five ACC seats are up for election in 2024.</p> 
-            <p>This election season The Greater Tucson Climate Coalition is conducting a voter eduction campaign to education Arizona's voters on the role and function of the Corporation Commission. This non-partisan voter education campaign asks volunteers to share a simple message: <span style="font-weight: bold;">Vote for three!</span></p>
+            <p>This election season The Greater Tucson Climate Coalition is conducting a voter eduction campaign to educate Arizona's voters on the role and function of the Corporation Commission. This non-partisan voter education campaign asks volunteers to share a simple message: <span style="font-weight: bold;">Vote for three!</span></p>
              <p>Learn more about <a href="acc.html">The Arizona Corporation Commissions</a>.</p>
         </div>
         
